# FCM_earthquake_cpp_server

./: .gitignore  .travis.yml  CMakeLists.txt  EarthquakeServer.cpp  EarthquakeServer.hpp  FCM_earthquake_cpp_server.do  FirecloudServerInitializer.h  README.md  client_https.hpp  eqserverd  http_examples.cpp  http_web_server.cpp  main_server.cpp
DataSources/: CommonProvider.cpp  CommonProvider.h  DataSource.cpp  DataSource.h  DataSource.hpp  Database.cpp  Database.hpp  EventProvider.cpp  EventProvider.hpp  INGVDataSource.cpp  INGVDataSource.hpp  NotificationProvider.cpp  NotificationProvider.h  ReportProvider.cpp  ReportProvider.hpp  UserPreferenceProvider.cpp  UserPreferenceProvider.hpp
DataSources/EventsWebProvider/: INGVDataSource.cpp  INGVDataSource.hpp  USGSDataSource.cpp  USGSDataSource.hpp  WebDataSourceInterface.cpp  WebDataSourceInterface.hpp
Detector/: EQDetector.hpp  GenericEQDetector.hpp  Report.hpp  ReportParserHTTP.cpp  ReportParserHTTP.hpp  Shake.hpp  SimpleEQDetector.cpp  SimpleEQDetector.hpp
Firebase/: FirebaseNotificationHandler.cpp  FirebaseNotificationHandler.hpp  FirebaseNotificationManager.cpp  FirebaseNotificationManager.hpp  NotificationDataBuilder.cpp  NotificationDataBuilder.hpp  NotificationFormatter.hpp
Models/: Event-odb.cpp  Event-odb.hpp  Event-odb.ixx  Event.cpp  Event.hpp  ToGenerateOdbFiles  database.hpp
Models/Event/: Event-odb.cpp  Event-odb.hpp  Event.cpp  Event.hpp  EventBuilder.cpp  EventBuilder.hpp  event_field.hpp
Models/Notification/: Notification.cpp  Notification.hpp
Models/Report/: DBReport-odb.cpp  DBReport-odb.hpp  DBReport-odb.ixx  DBReport.cpp  DBReport.hpp  ReportBuilder.cpp  ReportBuilder.hpp
Models/User/: User-odb.cpp  User-odb.hpp  User.cpp  User.hpp  UserBuilder.cpp  UserBuilder.h  UserBuilder.hpp  user_field.hpp
ServerUtility/: FirecloudServerInitializer.cpp  FirecloudServerInitializer.hpp  HTTPQuakeServer.cpp  HTTPQuakeServer.hpp  HttpReportServer.cpp  HttpReportServer.hpp  HttpUserServer.cpp  HttpUserServer.hpp  ReportChecker.cpp  ReportChecker.hpp  ServerFunctions.cpp  ServerFunctions.hpp  ServerInitializer.cpp  ServerInitializer.hpp  ServerUtility.cpp  ServerUtility.hpp  WebCacher.cpp  WebCacher.hpp  client_http.hpp
Utility/: GeoUtility.cpp  GeoUtility.hpp  LatLng.hpp  TimeUtility.cpp  TimeUtility.hpp  UserMatching.cpp  UserMatching.hpp  json.hpp
instructions/: readme
tests/: CMakeLists.txt  event_provider_test.cpp  io_test.cpp  parse_test.cpp  simple_detector_test.cpp  user_provider_test.cpp  user_server_test.cpp
website/: index.html
